:mem: updated documentation

--- a/docs/sharex.mdx
+++ b/docs/sharex.mdx
@@ -8,6 +8,24 @@ icon: MonitorCog
 
 [ShareX](https://getsharex.com/) is a popular open-source screenshot and file sharing tool for Windows. You can configure ShareX to upload screenshots and files directly to your self-hosted S.I.M.P instance using its custom uploader feature.
 
+<Callout title="Try it out!">
+  <div>
+    <p>
+      <strong>Want to test S.I.M.P with ShareX before self-hosting?</strong>
+    </p>
+    <ol>
+      <li>Follow the steps below to set up ShareX.</li>
+      <li>As the host use `https://demo.usesimp.app/api/upload`</li>
+      <li>Use the demo **upload_key** `9bQ&iQSsSJA@N!Ca`</li>
+    </ol>
+  </div>
+</Callout>
+
+<Callout type="warn">
+  **Please note:** All files uploaded to the demo instance are automatically
+  deleted every 10 minutes.
+</Callout>
+
 ![ShareX custom image uploader](/sharex_custom_uploader.png)
 
 ## Step 1: Find Your S.I.M.P Upload Key
