--- a/docs/deployment/index.mdx
+++ b/docs/deployment/index.mdx
@@ -11,5 +11,6 @@ This section covers how to deploy S.I.M.P in different environments.
 - [Bare Metal](./bare-metal.mdx)
 - [Docker](./docker.mdx)
 - [Docker Compose](./docker-compose.mdx)
+- [Standalone + Ngrok](./standalone-ngrok.mdx)
 
 Choose the method that best fits your infrastructure and experience.
