--- a/docs/configuration.mdx
+++ b/docs/configuration.mdx
@@ -133,7 +133,7 @@ rate_limit:
 | Key                | Type     | Example           | Description                                                                          |
 | ------------------ | -------- | ----------------- | ------------------------------------------------------------------------------------ |
 | base_path          | string   | `./storage`       | Directory for storing uploaded images.                                               |
-| max_storage        | string   | `10MB`            | Maximum total storage allowed (e.g., (e.g., `10B`, `10KB`, `10MB`, `10GB`, `10TB`)). |
+| max_storage        | string   | `10MB`            | Maximum total storage allowed (e.g., (e.g., `10B`, `10KB`, `10MB`, `10GB`, `10TB`). |
 | allowed_extensions | string[] | `[jpg, png, ...]` | List of allowed file extensions for uploads.                                         |
 
 ### `logging`
